Update and rename home.html to index.html

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 			</div>
 
 			<div class="header-nav">
-				<a class="active" href="home.html"> HOME</a> 
+				<a class="active" href="index.html"> HOME</a> 
 				<a href="ingredients.html"> INGREDIENTS</a> 
 				<a href="instructions.html"> INSTRUCTIONS</a> 
 				<a href="other.html"> OTHER RECIPE</a>
