--- a/ingredients.html
+++ b/ingredients.html
@@ -122,7 +122,7 @@
 			</div>
 
 			<div class="header-nav">
-				<a href="home.html"> HOME</a> 
+				<a href="index.html"> HOME</a> 
 				<a class="active" href="ingredients.html"> INGREDIENTS</a> 
 				<a href="instructions.html"> INSTRUCTIONS</a> 
 				<a href="other.html"> OTHER RECIPE</a>
