--- a/instructions.html
+++ b/instructions.html
@@ -135,7 +135,7 @@
 			</div>
 
 			<div class="header-nav">
-				<a href="home.html"> HOME</a> 
+				<a href="index.html"> HOME</a> 
 				<a href="ingredients.html"> INGREDIENTS</a> 
 				<a class="active" href="instructions.html"> INSTRUCTIONS</a> 
 				<a href="other.html"> OTHER RECIPE</a>
