--- a/other.html
+++ b/other.html
@@ -251,7 +251,7 @@
 			</div>
 
 			<div class="header-nav">
-				<a href="home.html"> HOME</a> 
+				<a href="index.html"> HOME</a> 
 				<a href="ingredients.html"> INGREDIENTS</a> 
 				<a href="instructions.html"> INSTRUCTIONS</a> 
 				<a class="active" href="other.html"> OTHER RECIPE</a>
